@@ -10,14 +10,10 @@
  parentproxyport="8000"
  timeout="30"
  obfuscateip="0"
- debuglevel="2"
+ debuglevel="3"
  showerrors="0"
  logfile="&lt;stdout&gt;"
  noproxyfor="localhost,127.0.0.1"
 >
 <filter name="Compress"/>
-<filter name="Rewriter"/>
-<filter name="Blocker"/>
-<filter name="BinaryCharFilter"/>
-<filter name="Header"/>
 </webcleaner>
