@@ -74,11 +74,11 @@ class Compress (Filter):
             header = compobj['header']
             if header:
                 compobj['header'] = ''
-                #debug(NIGHTMARE, 'writing gzip header\n')
+                #debug(NIGHTMARE, 'writing gzip header')
             if data:
                 compobj['size'] += len(data)
                 compobj['crc'] = zlib.crc32(data, compobj['crc'])
-                #debug(NIGHTMARE, 'compressing %s\n' % `data`)
+                #debug(NIGHTMARE, 'compressing', `data`)
                 data = "%s%s"%(header, compobj['compressor'].compress(data))
             else:
                 data = header
@@ -90,15 +90,17 @@ class Compress (Filter):
         if compobj:
             header = compobj['header']
             if header:
-                compobj['header'] = ''
+                #debug(NIGHTMARE, 'final writing gzip header')
+                pass
             if data:
                 compobj['size'] += len(data)
                 compobj['crc'] = zlib.crc32(data, compobj['crc'])
-                #debug(NIGHTMARE, 'final compressing %s\n' % `data`)
-                data = "%s%s"%(header, compobj['compressor'].compress(data))
+                #debug(NIGHTMARE, 'final compressing', `data`)
+                data = "%s%s"%(header,
+                               compobj['compressor'].compress(data))
             else:
                 data = header
-            #debug(NIGHTMARE, 'finishing compressor\n')
+            #debug(NIGHTMARE, 'finishing compressor')
             data += compobj['compressor'].flush(zlib.Z_FINISH) + \
 	            struct.pack('<l', compobj['crc']) + \
 		    struct.pack('<l', compobj['size'])
@@ -113,8 +115,8 @@ class Compress (Filter):
                 headers['Content-Encoding'] += ', gzip'
         else:
             compressobj = getCompressObject()
-            headers['Content-Encoding'] = 'gzip'
-        #debug(HURT_ME_PLENTY, "compress filter getAttrs", headers)
+            headers['Content-Encoding'] = 'gzip\r'
+        #debug(HURT_ME_PLENTY, "compress filter getAttrs", `headers.headers`)
         d = Filter.getAttrs(self, headers, url)
         d['compressobj'] = compressobj
         return d
