@@ -1,8 +1,10 @@
 webcleaner (0.47) unstable; urgency=low
 
   * wc/parser: fix memory leaks
+  * wc/proxy: reset self.attrs in recycled servers; this finally fixes
+    the zlib.flush error
 
- -- Bastian Kleineidam <calvin@debian.org>  Sat, 22 Jun 2002 09:30:48 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Sat, 22 Jun 2002 20:50:16 +0200
 
 webcleaner (0.46) unstable; urgency=low
 
